[package]
name = "coffeeapp"
version = "0.1.0"
authors = ["Spencer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dialoguer = "0.7.1"
indicatif = "0.15.0"
colored = "2.0.0"
pad = "0.1.6"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3